# uvc_android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/xreal/uvctest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xreal/uvctest/: MainActivity.kt
app/src/main/java/com/xreal/uvctest/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/xreal/uvctest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
uvctest/: build.gradle.kts
uvctest/src/androidTest/java/com/xreal/uvctest/: ExampleInstrumentedTest.java
uvctest/src/main/cpp/: Android.bp  CMakeLists.txt  main.c  show_image.cpp  show_image_c.cpp  uvctest.cpp  v4l2.c  v4l2.h  xreal_metadata.c
uvctest/src/main/cpp/includes/: frame_metadata.h  metadata.h  record_config.json  show_image.h  show_image_c.h  signal_handler.h
uvctest/src/main/cpp/includes/record/: record-threadsafe-queue.h  record_config.json  show_image.cpp  show_image.h  show_image_c.cpp  show_image_c.h  show_image_global.h
uvctest/src/main/java/com/xreal/uvctest/: NativeLib.java
uvctest/src/test/java/com/xreal/uvctest/: ExampleUnitTest.java
